--- a/Hypothesis_Testing_Lab/Hypothesis_Testing_Lab.ipynb
+++ b/Hypothesis_Testing_Lab/Hypothesis_Testing_Lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,24 +42,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. We choose a confidence level. We will use the commonly use 95%"
+    "2. We choose a confidence level. We will use the commonly used 95%"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. We compute the test statistic for our sample, i.e. t parameter. We use the t parameter because although the test sample size is bigger than 30 we don't know the population standard deviation\n",
-    "    - t = (sample_mean - population_mean)/(sample_std_corr/(sample_size)^0.5) = (130.1 - 120)/(21.21/(100)^0.5) = 4.7619\n",
-    "    - sample_mean = 130.1mmHG\n",
-    "    - population_mean = 120mmHG\n",
-    "    - sample_std_corr = 21.21\n",
-    "    - sample_size = 100\n"
+    "3. We compute the test statistic for our sample, i.e. t parameter. We use the t parameter because although the test sample size is bigger than 30 we don't know the population standard deviation:\n",
+    "\n",
+    "$$t = \\displaystyle \\frac{\\hat{x}-\\mu}{\\frac{\\sigma_{x}}{\\sqrt{n}}}$$\n",
+    "\n",
+    "- $\\hat{x} = \\text{Sample Mean = 130.1 mmHG}$\n",
+    "- $\\mu = \\text{Population Mean = 120 mmHG}$\n",
+    "- $\\sigma_{x} = \\text{Corrected Sample Standard Deviation =  21.21 mmHG}$\n",
+    "- $n = \\text{Sample Size = 100}$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -80,26 +82,33 @@
        "4.761904761904759"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t_value = (sample_mean - population_mean)/(sample_std/np.sqrt(n))\n",
-    "t_value"
+    "t_score = (sample_mean - population_mean)/(sample_std/np.sqrt(n))\n",
+    "t_score"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. We compare our t score with the t critical for a two tailed test an a 95% confidence level"
+    "4. We compare our t_score with the t_critical for a two tailed test an a 95% confidence level"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Looking into a t-table, the t critical is 1.984 (approx. for a degree of freedom = 100 instead of 99). We can also calcualte t_critical using the cumulative distribution t function provided by scipy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +117,7 @@
        "1.9842169515086827"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,14 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Looking into a t-table, the t critical is 1.984 (approx. for a degree of freedom = 100 instead of 99)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "6. Our t score is well above our t-critical and therefore we are in the rejection zone. We should reject our H0\n"
+    "6. Our t_score is well above our t_critical and therefore we are in the rejection zone. We should reject our H0.\n"
    ]
   },
   {
@@ -137,7 +139,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "7. Conclusion: The  average systolic blood pressure of the selected group is different\n"
+    "7. Conclusion: The  average systolic blood pressure of the selected group is different to the population one\n"
    ]
   },
   {
@@ -148,30 +150,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 60,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['New Machine', 'Old Machine'], dtype='object')"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df = pd.read_csv(\"Data/Data_Machine.txt\", sep=\"\\t\")\n",
-    "df = df.rename(columns = {'  Old Machine': 'Old Machine'})\n",
-    "df.columns"
+    "- H0: The new machine is not better than the old one, $\\hat{x}_{new} <= \\hat{x}_{old}$\n",
+    "- Ha: The new machine is better than the old one, $\\hat{x}_{new} > \\hat{x}_{old}$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"Data/Data_Machine.txt\", sep=\"\\t\")\n",
+    "df = df.rename(columns = {'  Old Machine': 'Old Machine'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +210,7 @@
        "3.58"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -241,39 +239,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.2621571627409915"
+       "1.83"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tc = t.ppf(0.975,n-1)\n",
+    "tc = round(t.ppf(0.95,n-1),2)\n",
     "tc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The experiment t critical for a 95% confidence level is 1.83\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'The experiment t critical for a 95% confidence level is {tc}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Null Hypothesis rejected\n",
-    "\n",
-    "TO BE CONTINUED"
+    "The t_value is in the rejection zone and therefore the null hypothesis shoulbe rejected."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Conclusion: The data provides sufficient evidence to confirm that the new machine is better than the old one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
