--- a/Hypothesis_Testing_Lab/Hypothesis_Testing_Lab.ipynb
+++ b/Hypothesis_Testing_Lab/Hypothesis_Testing_Lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "4.761904761904759"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "1.9842169515086827"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -201,35 +201,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.58"
+       "-3.58"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t_value = round((old_mean - new_mean)/np.sqrt((old_std**2/n)+(new_std**2/n)),2)\n",
+    "t_value = round((new_mean - old_mean)/np.sqrt((new_std**2/n)+(old_std**2/n)),2)\n",
     "t_value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The t value of the two samples is t = 3.58\n"
+      "The t value of the two samples is t = -3.58\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "1.83"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -279,14 +279,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The t_value is in the rejection zone and therefore the null hypothesis shoulbe rejected."
+    "The t_value is outside the rejection zone and therefore the null hypothesis shoulbe accepted."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion: The data provides sufficient evidence to confirm that the new machine is better than the old one."
+    "Conclusion: The new machine is not better than the old one."
    ]
   },
   {
