--- a/Jupyter_Lab/Jupyterlab.ipynb
+++ b/Jupyter_Lab/Jupyterlab.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "da79ebe0",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "f2f9f197",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "db2d205e",
    "metadata": {},
    "outputs": [
@@ -97,16 +97,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please introduce the person:Quique\n"
+      "Please introduce the person:\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'Quique'"
+       "''"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "5b23925b",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "30c7ca81",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "67840b2d",
    "metadata": {},
    "outputs": [
@@ -168,17 +168,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Do you want to go to the mountain or to the beach?:Beach\n",
-      "Do you want to go to a resort?:Resort\n"
+      "Do you want to go to the mountain or to the beach?:\n",
+      "Do you want to go to a resort?:\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "('Beach', 'Resort')"
+       "('', '')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "ae0a67e2",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,12 +236,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "87b58e67",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import HTML"
+    "from IPython.display import HTML\n",
+    "import IPython.display"
    ]
   },
   {
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "adb1b47a",
    "metadata": {},
    "outputs": [],
@@ -275,12 +276,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "d14d1b5b",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\miniconda3\\envs\\DA_ENV\\lib\\site-packages\\IPython\\core\\display.py:724: UserWarning: Consider using IPython.display.IFrame instead\n",
+      "  warnings.warn(\"Consider using IPython.display.IFrame instead\")\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -290,7 +299,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,8 +310,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "58a34219",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player = IPython.display.IFrame(src=\"https://www.youtube.com/embed/s4ABpbxIPFI\",\n",
+    "                width=\"640\",\n",
+    "                height=\"320\",\n",
+    "                frameborder=\"0\",\n",
+    "                allowtransparency=\"true\",\n",
+    "                allow=\"encrypted-media\",\n",
+    "                )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ab254532",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"640\"\n",
+       "            height=\"320\"\n",
+       "            src=\"https://www.youtube.com/embed/s4ABpbxIPFI?frameborder=0&allowtransparency=true&allow=encrypted-media\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x268533bb550>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "IPython.display.display(player)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c37216b4",
    "metadata": {},
    "outputs": [],
    "source": []
