--- a/Jupyter_Lab/Jupyterlab.ipynb
+++ b/Jupyter_Lab/Jupyterlab.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "afbec695",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Table of Contents\n",
     "\n",
@@ -19,7 +23,11 @@
   {
    "cell_type": "markdown",
    "id": "e7874362",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# My Holidays <a class=\"anchor\" id=\"myholidays\"></a>"
    ]
@@ -27,7 +35,11 @@
   {
    "cell_type": "markdown",
    "id": "6e2b18d4",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## Purpose <a class=\"anchor\" id=\"purpose\"></a>"
    ]
@@ -35,7 +47,11 @@
   {
    "cell_type": "markdown",
    "id": "fceb625b",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "The purpose of this nootebooks is to introduce myself and my holidays preferences\n",
     "\n",
@@ -52,26 +68,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "da79ebe0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function name asks the user the name of the person"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "f2f9f197",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function name asks the user the name of the person\n",
+    "\n",
     "def name(): \n",
     "    \n",
     "    name = input(\"Please introduce the person:\")\n",
     "    \n",
-    "    return name"
+    "    print(f'Hello I want to introduce you to {name.capitalize()}')\n",
+    "    print(\"Here is a picture of him!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7efccbb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please introduce the person:Kike\n",
+      "Hello I want to Introduce you to Kike\n"
+     ]
+    }
+   ],
+   "source": [
+    "name()"
    ]
   },
   {
@@ -366,6 +394,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "interpreter": {
    "hash": "350fa199ac5972690c7e339cc739f563045f32da9cdb6c3e3b5da606ff6ebbd1"
   },
