--- a/Prework_Lab/Lab_Duel-Of-Sorcerers.ipynb
+++ b/Prework_Lab/Lab_Duel-Of-Sorcerers.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -362,28 +362,38 @@
     }
    ],
    "source": [
-    "gandalf_counter = 1\n",
-    "saruman_counter = 1\n",
+    "# Initializen Variables - counters and Gandalf (G) and Saruman (S) Flags\n",
+    "\n",
+    "gandalf_counter = 0\n",
+    "saruman_counter = 0\n",
     "Flag = \"\"\n",
     "\n",
+    "# Looping the list of spells using indexes and the length of the list of spells with range\n",
     "for i in range(spells):\n",
     "    \n",
+    "    # If Flag is G  that mean that the previous clash was won by Gandalf. Same for SAruman\n",
     "    if Flag == \"G\":\n",
     "        \n",
+    "        # checking if Gandalf won\n",
     "        if gandalf_power[i] > saruman_power[i]:\n",
     "            \n",
+    "            # increasing the wins count\n",
     "            gandalf_counter += 1\n",
     "            \n",
+    "            # If the winning condition is met we break (stop) the for loop and print the winner\n",
     "            if gandalf_counter == 3:\n",
     "                \n",
     "                print(\"Gandalf Wins!\")\n",
     "                break\n",
     "        \n",
+    "        # checking if Saruman won\n",
     "        if gandalf_power[i] < saruman_power[i]:\n",
     "             \n",
+    "            # we change the flag to Saruman and reset the counter of gandalf (as we dont have a consecutive win)\n",
     "            Flag == \"S\"\n",
     "            gandalf_counter = 0\n",
-    "        \n",
+    "    \n",
+    "    # same logic as in the Gandalf if block but for Saruman \n",
     "    elif Flag == \"S\":\n",
     "        \n",
     "        if gandalf_power[i] < saruman_power[i]:\n",
@@ -399,17 +409,20 @@
     "             \n",
     "            Flag = \"G\"        \n",
     "            saruman_counter = 0\n",
+    "    \n",
+    "    # we enter this block when the flag is still not defined (first element in the loop)\n",
     "    else:\n",
     "        \n",
     "        if gandalf_power[i] > saruman_power[i]:\n",
     "            \n",
     "            Flag = \"G\"\n",
+    "            gandalf_counter += 1\n",
     "        \n",
     "        if gandalf_power[i] < saruman_power[i]:        \n",
     "        \n",
     "            Flag = \"S\"\n",
-    "            \n",
-    "    \n",
+    "            saruman_counter += 1\n",
+    "    # when we reached the end of the list of spells, it means there is no winner\n",
     "    if i == spells - 1:\n",
     "    \n",
     "        print(\"It is a tie!\")       "
@@ -460,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
