--- a/Prework_Lab/Lab_rock-paper-scissors.ipynb
+++ b/Prework_Lab/Lab_rock-paper-scissors.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "'paper'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,16 +187,12 @@
     "    \n",
     "    \"\"\"\n",
     "    \n",
-    "    move = \"\"\n",
-    "    Flag = False\n",
+    "    move = input(\"Please choose your move: \").lower()\n",
     "\n",
     "    while move not in gestures:\n",
     "        \n",
-    "        if Flag == True:\n",
     "            print(\"Sorry that move is not legal in this game. Try one of the legal options.\")\n",
-    "        \n",
-    "        move = input(\"Please choose your move: \").lower()\n",
-    "        Flag = True\n",
+    "            move = input(\"Please choose your move: \").lower()\n",
     "        \n",
     "    return move\n",
     "    "
@@ -204,13 +200,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorry that move is not legal in this game. Try one of the legal options.\n",
+      "Sorry that move is not legal in this game. Try one of the legal options.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'rock'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# player_move() function test\n",
     "\n",
-    "# player_move(gestures_3moves)"
+    "player_move(gestures_3moves)"
    ]
   },
   {
@@ -223,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +339,7 @@
        "1"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +416,7 @@
        "(0, 0)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,36 +493,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please insert the number of rounds you wanna play: 3\n",
-      "Please choose your move: rock\n",
       "The gesture of the CPU is: paper\n",
       "The gesture of the Player is: rock\n",
       "The CPU is the winner of this round.\n",
       "The overall result of the current game is: Player Wins = 0 / CPU Wins = 1\n",
-      "Please choose your move: paper\n",
       "The gesture of the CPU is: rock\n",
       "The gesture of the Player is: paper\n",
       "The Player is the winner of this round.\n",
       "The overall result of the current game is: Player Wins = 1 / CPU Wins = 1\n",
-      "Please choose your move: paper\n",
       "The gesture of the CPU is: paper\n",
-      "The gesture of the Player is: paper\n",
-      "The round is a tie.\n",
-      "The overall result of the current game is: Player Wins = 1 / CPU Wins = 1\n",
-      "Please choose your move: \n",
-      "Sorry that move is not legal in this game. Try one of the legal options.\n",
-      "Please choose your move: paper\n",
+      "The gesture of the Player is: rock\n",
+      "The CPU is the winner of this round.\n",
+      "The overall result of the current game is: Player Wins = 1 / CPU Wins = 2\n",
       "The gesture of the CPU is: scissors\n",
       "The gesture of the Player is: paper\n",
       "The CPU is the winner of this round.\n",
-      "The overall result of the current game is: Player Wins = 1 / CPU Wins = 2\n",
+      "The overall result of the current game is: Player Wins = 1 / CPU Wins = 3\n",
       "The CPU won the game! Better Luck Next Time!\n"
      ]
     }
@@ -635,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
