--- a/TA_Solutions/Week2/Customer_Analysis_Case_Study_Plotting.ipynb
+++ b/TA_Solutions/Week2/Customer_Analysis_Case_Study_Plotting.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import datetime as dt"
    ]
   },
   {
@@ -286,6 +287,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   2011-02-18\n",
+       "1   2011-01-18\n",
+       "2   2011-02-10\n",
+       "3   2011-01-11\n",
+       "4   2011-01-17\n",
+       "Name: effective_to_date, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "effective_to_date_dt = pd.to_datetime(insurance_df[\"effective_to_date\"])\n",
+    "effective_to_date_dt.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        Feb\n",
+       "1        Jan\n",
+       "2        Feb\n",
+       "3        Jan\n",
+       "4        Jan\n",
+       "        ... \n",
+       "10905    Jan\n",
+       "10906    Jan\n",
+       "10907    Feb\n",
+       "10908    Feb\n",
+       "10909    Jan\n",
+       "Name: effective_to_date, Length: 10910, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "months = effective_to_date_dt.apply(lambda x:x.strftime(\"%b\"))\n",
+    "months"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -301,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +371,7 @@
        "Name: response, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +394,7 @@
        "<AxesSubplot:title={'center':'Response Rate'}, ylabel='response'>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -372,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +449,7 @@
        "<AxesSubplot:title={'center':'Response Rate'}, xlabel='response', ylabel='count'>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -433,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +586,7 @@
        "7           Web      Yes    177"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +613,7 @@
        "<AxesSubplot:title={'center':'Response Rate VS Channel'}, xlabel='sales_channel', ylabel='count'>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -590,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +667,7 @@
        "<AxesSubplot:xlabel='sales_channel', ylabel='count'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -648,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +716,7 @@
        "<AxesSubplot:title={'center':'Response Rate VS Total Claim Amount'}, xlabel='response', ylabel='total_claim_amount'>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -693,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +964,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +992,7 @@
        "Name: total_claim_amount_binned, dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +1012,7 @@
        "<AxesSubplot:title={'center':'Response Rate VS Total Claim Amount'}, xlabel='total_claim_amount_binned', ylabel='count'>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -988,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1226,7 @@
        "total_claim_amount                       1.000000  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,6 +1236,15 @@
     "\n",
     "correlation_matrix = insurance_df.corr()\n",
     "correlation_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correlation_matrix.to_csv(\"corr_matrix.csv\")"
    ]
   },
   {
