--- a/Hypothesis_Testing_Lab/Hypothesis_Testing_Lab.ipynb
+++ b/Hypothesis_Testing_Lab/Hypothesis_Testing_Lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,23 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.761904761904759"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "t_score = (sample_mean - population_mean)/(sample_std/np.sqrt(n))\n",
-    "t_score"
+    "t_score = (sample_mean - population_mean)/(sample_std/np.sqrt(n))\n"
    ]
   },
   {
@@ -108,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +105,7 @@
        "1.9842169515086827"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,13 +141,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- H0: The new machine is not better than the old one, $\\hat{x}_{new} <= \\hat{x}_{old}$\n",
-    "- Ha: The new machine is better than the old one, $\\hat{x}_{new} > \\hat{x}_{old}$\n"
+    "- H0: The processing time of the old machine is equal or lower than the new one (so the new machine is not better), $\\hat{x}_{old} <= \\hat{x}_{new}$\n",
+    "- Ha: The processing time of the old machine is higher than the new one (so the new machine is better), $\\hat{x}_{old} > \\hat{x}_{new}$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +157,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>New Machine</th>\n",
+       "      <th>Old Machine</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>42.1</td>\n",
+       "      <td>42.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>41.0</td>\n",
+       "      <td>43.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41.3</td>\n",
+       "      <td>43.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>41.8</td>\n",
+       "      <td>43.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>42.4</td>\n",
+       "      <td>42.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>42.8</td>\n",
+       "      <td>43.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>43.2</td>\n",
+       "      <td>43.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>42.3</td>\n",
+       "      <td>41.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>41.8</td>\n",
+       "      <td>44.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>42.7</td>\n",
+       "      <td>44.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   New Machine  Old Machine\n",
+       "0         42.1         42.7\n",
+       "1         41.0         43.6\n",
+       "2         41.3         43.8\n",
+       "3         41.8         43.3\n",
+       "4         42.4         42.5\n",
+       "5         42.8         43.5\n",
+       "6         43.2         43.1\n",
+       "7         42.3         41.7\n",
+       "8         41.8         44.0\n",
+       "9         42.7         44.1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +306,7 @@
        "-3.58"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +344,7 @@
        "1.83"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
